--- a/m/busi/apply.html
+++ b/m/busi/apply.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>业务申请</title>
     <link rel="stylesheet" href="../js/lib/weuijs/style/weuijs.min.css">
-    <link rel="stylesheet" href="../css/flow.css">
     <style type="text/css">
     body {
         background-color: #f8f8f8;
@@ -109,7 +108,7 @@
                             <li class="weui-uploader__file" style="background-image:url(./images/pic_160.png)"></li>-->
                                 </ul>
                                 <div class="weui-uploader__input-box">
-                                    <input id="uploaderInput" class="weui-uploader__input" type="file" accept="image/*" multiple="">
+                                    <input id="uploaderInput" class="weui-uploader__input" type="file" accept="image/*" multiple>
                                 </div>
                             </div>
                         </div>
@@ -157,7 +156,7 @@
                             <li class="weui-uploader__file" style="background-image:url(./images/pic_160.png)"></li>-->
                                 </ul>
                                 <div class="weui-uploader__input-box">
-                                    <input id="uploaderInput" class="weui-uploader__input" type="file" accept="image/*" multiple="">
+                                    <input id="uploaderInput" class="weui-uploader__input" type="file" accept="image/*" multiple>
                                 </div>
                             </div>
                         </div>
@@ -175,7 +174,7 @@
                             <li class="weui-uploader__file" style="background-image:url(./images/pic_160.png)"></li>-->
                                 </ul>
                                 <div class="weui-uploader__input-box">
-                                    <input id="uploaderInput" class="weui-uploader__input" type="file" accept="image/*" multiple="">
+                                    <input id="uploaderInput" class="weui-uploader__input" type="file" accept="image/*" multiple>
                                 </div>
                             </div>
                         </div>
@@ -279,7 +278,7 @@
                             <li class="weui-uploader__file" style="background-image:url(./images/pic_160.png)"></li>-->
                                 </ul>
                                 <div class="weui-uploader__input-box">
-                                    <input id="uploaderInput" class="weui-uploader__input" type="file" accept="image/*" multiple="">
+                                    <input id="uploaderInput" class="weui-uploader__input" type="file" accept="image/*" multiple>
                                 </div>
                             </div>
                         </div>
