--- a/m/register.html
+++ b/m/register.html
@@ -86,18 +86,6 @@
         }
 
         var data = $('#form').serializeObject();
-
-        var secord = 180;
-        $(target).addClass('btn_plain-disabled').text(secord + '秒后重发');
-        var timer = setInterval(function() {
-            secord--;
-            $(target).text(secord + '秒后重发');
-            if (secord == 0) {
-                clearInterval(timer);
-                $(target).removeClass('btn_plain-disabled').text('重发验证码');
-            }
-        }, 1000);
-
         $.ajax({
             url: '/m/action/notify/mobilecode/register',
             type: 'POST',
@@ -111,6 +99,21 @@
             },
             success: function(data) {
                 console.log(arguments);
+
+                if(data.errcode == 0) {
+                    var secord = 180;
+                    $(target).addClass('btn_plain-disabled').text(secord + '秒后重发');
+                    var timer = setInterval(function() {
+                        secord--;
+                        $(target).text(secord + '秒后重发');
+                        if (secord == 0) {
+                            clearInterval(timer);
+                            $(target).removeClass('btn_plain-disabled').text('重发验证码');
+                        }
+                    }, 1000);
+                } else {
+                    weui.topTips(data.errmsg);
+                }
             }
         });
     }
@@ -133,6 +136,12 @@
             },
             success: function(data) {
                 console.log(arguments);
+
+                if(data.errcode == 0) {
+                    weui.toast('注册成功');
+                } else {
+                    weui.topTips(data.errmsg);
+                }
             },
             complete: function() {
                 loading.hide();
