更新生成文件

--- a/m/busi/mchnt-base-info.html
+++ b/m/busi/mchnt-base-info.html
@@ -406,7 +406,13 @@
     function onSearch(param, success, error) {
         $$.request('/action/bm/mchnt-base-info/search', param, {
             success: function(data) {
-                success(data.rows);
+                if (data.errcode == 0) {
+                    success(data.rows);
+                } else {
+                    weui.alert(data.errmsg, function () {
+                        error();
+                    }, { title: '提示' });
+                }
             },
             error: function() {
                 error();
@@ -420,7 +426,7 @@
                 if (data.errcode == 0) {
                     weui.form.load('#form', data.data);
                 } else {
-                    weui.alert(data.errmsg, { title: '错误提示' });
+                    weui.alert(data.errmsg, { title: '提示' });
                 }
             },
             error: function() {}
@@ -433,7 +439,7 @@
                 if (data.errcode == 0) {
                     weui.toast('操作成功');
                 } else {
-                    weui.alert(data.errmsg, { title: '错误提示' });
+                    weui.alert(data.errmsg, { title: '提示' });
                 }
             },
             error: function() {}
@@ -497,7 +503,7 @@
                 if (data.errcode == 0) {
                     weui.toast('操作成功');
                 } else {
-                    weui.alert(data.errmsg, { title: '错误提示' });
+                    weui.alert(data.errmsg, { title: '提示' });
                 }
             },
             error: function() {}
