--- a/m/busi/term-term-param-rel.html
+++ b/m/busi/term-term-param-rel.html
@@ -120,7 +120,13 @@
     function onSearch(param, success, error) {
         $$.request('/action/bm/term-term-param-rel/search', param, {
             success: function(data) {
-                success(data.rows);
+                if (data.errcode == 0) {
+                    success(data.rows);
+                } else {
+                    weui.alert(data.errmsg, function () {
+                        error();
+                    }, { title: '提示' });
+                }
             },
             error: function() {
                 error();
@@ -134,7 +140,7 @@
                 if (data.errcode == 0) {
                     weui.form.load('#form', data.data);
                 } else {
-                    weui.alert(data.errmsg, { title: '错误提示' });
+                    weui.alert(data.errmsg, { title: '提示' });
                 }
             },
             error: function() {}
@@ -147,7 +153,7 @@
                 if (data.errcode == 0) {
                     weui.toast('操作成功');
                 } else {
-                    weui.alert(data.errmsg, { title: '错误提示' });
+                    weui.alert(data.errmsg, { title: '提示' });
                 }
             },
             error: function() {}
@@ -211,7 +217,7 @@
                 if (data.errcode == 0) {
                     weui.toast('操作成功');
                 } else {
-                    weui.alert(data.errmsg, { title: '错误提示' });
+                    weui.alert(data.errmsg, { title: '提示' });
                 }
             },
             error: function() {}
