--- a/m/busi/mchnt-param.html
+++ b/m/busi/mchnt-param.html
@@ -393,7 +393,13 @@
     function onSearch(param, success, error) {
         $$.request('/action/bm/mchnt-param/search', param, {
             success: function(data) {
-                success(data.rows);
+                if (data.errcode == 0) {
+                    success(data.rows);
+                } else {
+                    weui.alert(data.errmsg, function () {
+                        error();
+                    }, { title: '提示' });
+                }
             },
             error: function() {
                 error();
@@ -407,7 +413,7 @@
                 if (data.errcode == 0) {
                     weui.form.load('#form', data.data);
                 } else {
-                    weui.alert(data.errmsg, { title: '错误提示' });
+                    weui.alert(data.errmsg, { title: '提示' });
                 }
             },
             error: function() {}
@@ -420,7 +426,7 @@
                 if (data.errcode == 0) {
                     weui.toast('操作成功');
                 } else {
-                    weui.alert(data.errmsg, { title: '错误提示' });
+                    weui.alert(data.errmsg, { title: '提示' });
                 }
             },
             error: function() {}
@@ -484,7 +490,7 @@
                 if (data.errcode == 0) {
                     weui.toast('操作成功');
                 } else {
-                    weui.alert(data.errmsg, { title: '错误提示' });
+                    weui.alert(data.errmsg, { title: '提示' });
                 }
             },
             error: function() {}
