--- a/m/busi/index.html
+++ b/m/busi/index.html
@@ -6,50 +6,50 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>首页</title>
-    <link rel="stylesheet" href="js/lib/weuijs/style/weuijs.min.css">
+    <link rel="stylesheet" href="../js/lib/weuijs/style/weuijs.min.css">
 </head>
 
 <body>
     <div class="weui-grids">
-        <a href="busi/apply.html" class="weui-grid">
+        <a href="apply.html" class="weui-grid">
             <div class="weui-grid__icon">
-                <img src="./images/icon_tabbar.png" alt="">
+                <img src="../images/icon_tabbar.png" alt="">
             </div>
             <p class="weui-grid__label">新商户入网</p>
         </a>
         <a href="javascript:;" class="weui-grid">
             <div class="weui-grid__icon">
-                <img src="./images/icon_tabbar.png" alt="">
+                <img src="../images/icon_tabbar.png" alt="">
             </div>
             <p class="weui-grid__label">存量开通业务</p>
         </a>
-        <a href="busi/mchnt-base-info.html" class="weui-grid">
+        <a href="mchnt-base-info.html" class="weui-grid">
             <div class="weui-grid__icon">
-                <img src="./images/icon_tabbar.png" alt="">
+                <img src="../images/icon_tabbar.png" alt="">
             </div>
             <p class="weui-grid__label">商户管理</p>
         </a>
-        <a href="busi/term-info.html" class="weui-grid">
+        <a href="term-info.html" class="weui-grid">
             <div class="weui-grid__icon">
-                <img src="./images/icon_tabbar.png" alt="">
+                <img src="../images/icon_tabbar.png" alt="">
             </div>
             <p class="weui-grid__label">终端管理</p>
         </a>
         <a href="javascript:;" class="weui-grid">
             <div class="weui-grid__icon">
-                <img src="./images/icon_tabbar.png" alt="">
+                <img src="../images/icon_tabbar.png" alt="">
             </div>
             <p class="weui-grid__label">...</p>
         </a>
         <a href="javascript:;" class="weui-grid">
             <div class="weui-grid__icon">
-                <img src="./images/icon_tabbar.png" alt="">
+                <img src="../images/icon_tabbar.png" alt="">
             </div>
             <p class="weui-grid__label">...</p>
         </a>
     </div>
-    <script type="text/javascript" src="js/lib/zepto.min.js"></script>
-    <script type="text/javascript" src="js/lib/weuijs/weuijs.min.js"></script>
+    <script type="text/javascript" src="../js/lib/zepto.min.js"></script>
+    <script type="text/javascript" src="../js/lib/weuijs/weuijs.min.js"></script>
     <script type="text/javascript">
     </script>
 </body>
