--- a/m/index.html
+++ b/m/index.html
@@ -30,18 +30,23 @@
     </div>
     <div class="page__bd page__bd_spacing">
        <div class="weui-flex item">
-		   <a href="busi/acq-busi.html" class="weui-flex__item">
-      			<div style="text-align: center;padding: 40px; color:white"><h2>收单业务</h2></div>
+		   <a href="busi/apply.html" class="weui-flex__item">
+      			<div style="text-align: center;padding: 40px; color:white"><h2>入网申请</h2></div>
       	   </a>
        </div>
        <div class="weui-flex item">
-		   <a href="busi/dmf-busi-no-license.html" class="weui-flex__item">
-		   		<div style="text-align: center;padding: 40px; color:white"><h2>个人当面付</h2></div>
+		   <a href="busi/acq-busi.html" class="weui-flex__item">
+		   		<div style="text-align: center;padding: 40px; color:white"><h2>开通业务</h2></div>
 		   </a>
 	   </div>
 	   <div class="weui-flex item">
 		   <a href="busi/dmf-busi.html" class="weui-flex__item">
-		   		<div style="text-align: center;padding: 40px; color:white"><h2>企业当面付</h2></div>
+		   		<div style="text-align: center;padding: 40px; color:white"><h2>商户管理</h2></div>
+		   </a>
+	   </div>
+	   <div class="weui-flex item">
+		   <a href="busi/dmf-busi.html" class="weui-flex__item">
+		   		<div style="text-align: center;padding: 40px; color:white"><h2>终端管理</h2></div>
 		   </a>
 	   </div>
     </div>
