解决冲突mchnt-base-info.html

--- a/m/busi/mchnt-base-info.html
+++ b/m/busi/mchnt-base-info.html
@@ -57,11 +57,7 @@
                         <label class="weui-label">联系人</label>
                     </div>
                     <div class="weui-cell__bd">
-<<<<<<< HEAD
-                        <input class="weui-input" type="text" name="linkman" required="" placeholder="请输入联系人">
-=======
                         <input class="weui-input" type="text" name="linkman" required="" pattern="" placeholder="请输入联系人">
->>>>>>> 8829825cf147aea88c7743afdbefe490ee95facb
                     </div>
                 </div>
                 <div class="weui-cell">
@@ -69,11 +65,7 @@
                         <label class="weui-label">手机号</label>
                     </div>
                     <div class="weui-cell__bd">
-<<<<<<< HEAD
-                        <input class="weui-input" type="text" name="mobile" required="" placeholder="请输入手机">
-=======
                         <input class="weui-input" type="text" name="mobile" required="" placeholder="请输入手机号" validType="mobile">
->>>>>>> 8829825cf147aea88c7743afdbefe490ee95facb
                     </div>
                 </div>
                 <div class="weui-cell">
@@ -81,11 +73,7 @@
                         <label class="weui-label">常用邮箱</label>
                     </div>
                     <div class="weui-cell__bd">
-<<<<<<< HEAD
-                        <input class="weui-input" type="text" name="email" placeholder="请输入常用邮箱">
-=======
                         <input class="weui-input" type="text" name="email" placeholder="请输入常用邮箱" invalidType="email">
->>>>>>> 8829825cf147aea88c7743afdbefe490ee95facb
                     </div>
                 </div>
                 <div class="weui-cell">
@@ -101,11 +89,7 @@
                         <label class="weui-label">联系电话</label>
                     </div>
                     <div class="weui-cell__bd">
-<<<<<<< HEAD
-                        <input class="weui-input" type="text" name="telno" placeholder="请输入联系电话">
-=======
                         <input class="weui-input" type="text" name="telno" placeholder="请输入联系电话" validType="telno">
->>>>>>> 8829825cf147aea88c7743afdbefe490ee95facb
                     </div>
                 </div>
                 <div class="weui-cell">
@@ -137,11 +121,7 @@
                         <label class="weui-label">营业执照号</label>
                     </div>
                     <div class="weui-cell__bd">
-<<<<<<< HEAD
-                        <input class="weui-input" type="text" name="license_no" required="" placeholder="请输入营业执照号">
-=======
                         <input class="weui-input" type="text" name="license_no" required="" placeholder="请输入营业执照号" invalidType="license_no">
->>>>>>> 8829825cf147aea88c7743afdbefe490ee95facb
                     </div>
                 </div>
                 <div class="weui-cell">
@@ -149,11 +129,7 @@
                         <label class="weui-label">营业执照期限</label>
                     </div>
                     <div class="weui-cell__bd">
-<<<<<<< HEAD
-                        <input class="weui-input" type="text" name="license_date" placeholder="请选择营业执照期限" id="license-date-picker">
-=======
                         <input class="weui-input" type="text" name="license_date" placeholder="请选择营业执照期限" invalidType="date" id="license-date-picker">
->>>>>>> 8829825cf147aea88c7743afdbefe490ee95facb
                     </div>
                 </div>
                 <div class="weui-cell">
@@ -203,11 +179,7 @@
                         <label class="weui-label">证件号码</label>
                     </div>
                     <div class="weui-cell__bd">
-<<<<<<< HEAD
-                        <input class="weui-input" type="text" name="cert_id" required="" placeholder="请输入证件号码">
-=======
                         <input class="weui-input" type="text" name="cert_id" required="" placeholder="请输入证件号码" validType="idnum">
->>>>>>> 8829825cf147aea88c7743afdbefe490ee95facb
                     </div>
                 </div>
                 <div class="weui-cell">
@@ -215,11 +187,7 @@
                         <label class="weui-label">证件有效期</label>
                     </div>
                     <div class="weui-cell__bd">
-<<<<<<< HEAD
-                        <input class="weui-input" type="text" name="cert_date" placeholder="请输入证件有效期">
-=======
                         <input class="weui-input" type="text" name="cert_date" placeholder="请输入证件有效期" invalidType="date">
->>>>>>> 8829825cf147aea88c7743afdbefe490ee95facb
                     </div>
                 </div>
                 <div class="weui-cell">
@@ -227,11 +195,7 @@
                         <label class="weui-label">组织机构代码</label>
                     </div>
                     <div class="weui-cell__bd">
-<<<<<<< HEAD
-                        <input class="weui-input" type="text" name="org_code" placeholder="请输入组织机构代码">
-=======
                         <input class="weui-input" type="text" name="org_code" placeholder="请输入组织机构代码" pattern="^[A-Za-z0-9]+$">
->>>>>>> 8829825cf147aea88c7743afdbefe490ee95facb
                     </div>
                 </div>
                 <div class="weui-cell weui-cell_select weui-cell_select-after">
@@ -239,14 +203,10 @@
                         <label for="" class="weui-label">状态</label>
                     </div>
                     <div class="weui-cell__bd">
-<<<<<<< HEAD
-                        <input class="weui-input" type="text" name="status" required="" placeholder="请输入状态">
-=======
                         <select class="weui-select" name="status">
                             <option value="1">启用</option>
                             <option value="0">注销</option>
                         </select>
->>>>>>> 8829825cf147aea88c7743afdbefe490ee95facb
                     </div>
                 </div>
                 <div class="weui-cell">
@@ -570,14 +530,9 @@
         }
         options = $.extend({
             defaultValue: defaultValue,
-<<<<<<< HEAD
-            onChange: function(result, opts) {},
-            onConfirm: function(result, opts) {
-=======
             onChange: function(result) {},
             onConfirm: function(result) {
                 var opts = this.options;
->>>>>>> 8829825cf147aea88c7743afdbefe490ee95facb
                 var text = result.map(function(item) {
                     return item[opts.textField];
                 });
@@ -615,11 +570,7 @@
                         if (data.errcode == 0) {
                             success(data[options.rowsName]);
                         } else {
-<<<<<<< HEAD
-                            weui.alert(data.errmsg, {
-=======
                             weui.alert(data.errmsg, error, {
->>>>>>> 8829825cf147aea88c7743afdbefe490ee95facb
                                 title: '提示'
                             });
                         }
@@ -629,7 +580,8 @@
                     }
                 })
             },
-            onClickItem: function(row, opts) {
+            onClickItem: function(row) {
+                var opts = this.options;
                 $target.val(row[opts.textField]).attr('data-value', row[opts.valueField]);
             }
         }, options);
