--- a/m/busi/apply.html
+++ b/m/busi/apply.html
@@ -493,10 +493,10 @@
             </div>
         </div>
     </div>
-    <script type="text/javascript" src="../js/lib/zepto.min.js"></script>
-    <script type="text/javascript" src="../js/lib/weuijs/weuijs.min.js"></script>
+    <script type="text/javascript" src="../js/lib/zepto.js"></script>
+    <script type="text/javascript" src="../js/lib/weuijs/weuijs.js"></script>
+    <script type="text/javascript" src="../js/district.js"></script>
     <script type="text/javascript">
-	var district = [{ "text": "湖南省", "children": [{ "text": "长沙市", "children": [{ "text": "市辖区", "value": "01" }, { "text": "芙蓉区", "value": "02" }, { "text": "天心区", "value": "03" }, { "text": "岳麓区", "value": "04" }, { "text": "开福区", "value": "05" }, { "text": "雨花区", "value": "11" }, { "text": "望城区", "value": "12" }, { "text": "长沙县", "value": "21" }, { "text": "宁乡县", "value": "24" }, { "text": "浏阳市", "value": "81" }], "value": "01" }, { "text": "株洲市", "children": [{ "text": "市辖区", "value": "01" }, { "text": "荷塘区", "value": "02" }, { "text": "芦淞区", "value": "03" }, { "text": "石峰区", "value": "04" }, { "text": "天元区", "value": "11" }, { "text": "株洲县", "value": "21" }, { "text": "攸县", "value": "23" }, { "text": "茶陵县", "value": "24" }, { "text": "炎陵县", "value": "25" }, { "text": "醴陵市", "value": "81" }], "value": "02" }, { "text": "湘潭市", "children": [{ "text": "市辖区", "value": "01" }, { "text": "雨湖区", "value": "02" }, { "text": "岳塘区", "value": "04" }, { "text": "湘潭县", "value": "21" }, { "text": "湘乡市", "value": "81" }, { "text": "韶山市", "value": "82" }], "value": "03" }, { "text": "衡阳市", "children": [{ "text": "市辖区", "value": "01" }, { "text": "珠晖区", "value": "05" }, { "text": "雁峰区", "value": "06" }, { "text": "石鼓区", "value": "07" }, { "text": "蒸湘区", "value": "08" }, { "text": "南岳区", "value": "12" }, { "text": "衡阳县", "value": "21" }, { "text": "衡南县", "value": "22" }, { "text": "衡山县", "value": "23" }, { "text": "衡东县", "value": "24" }, { "text": "祁东县", "value": "26" }, { "text": "耒阳市", "value": "81" }, { "text": "常宁市", "value": "82" }], "value": "04" }, { "text": "邵阳市", "children": [{ "text": "市辖区", "value": "01" }, { "text": "双清区", "value": "02" }, { "text": "大祥区", "value": "03" }, { "text": "北塔区", "value": "11" }, { "text": "邵东县", "value": "21" }, { "text": "新邵县", "value": "22" }, { "text": "邵阳县", "value": "23" }, { "text": "隆回县", "value": "24" }, { "text": "洞口县", "value": "25" }, { "text": "绥宁县", "value": "27" }, { "text": "新宁县", "value": "28" }, { "text": "城步苗族自治县", "value": "29" }, { "text": "武冈市", "value": "81" }], "value": "05" }, { "text": "岳阳市", "children": [{ "text": "市辖区", "value": "01" }, { "text": "岳阳楼区", "value": "02" }, { "text": "云溪区", "value": "03" }, { "text": "君山区", "value": "11" }, { "text": "岳阳县", "value": "21" }, { "text": "华容县", "value": "23" }, { "text": "湘阴县", "value": "24" }, { "text": "平江县", "value": "26" }, { "text": "汨罗市", "value": "81" }, { "text": "临湘市", "value": "82" }], "value": "06" }, { "text": "常德市", "children": [{ "text": "市辖区", "value": "01" }, { "text": "武陵区", "value": "02" }, { "text": "鼎城区", "value": "03" }, { "text": "安乡县", "value": "21" }, { "text": "汉寿县", "value": "22" }, { "text": "澧县", "value": "23" }, { "text": "临澧县", "value": "24" }, { "text": "桃源县", "value": "25" }, { "text": "石门县", "value": "26" }, { "text": "津市市", "value": "81" }], "value": "07" }, { "text": "张家界市", "children": [{ "text": "市辖区", "value": "01" }, { "text": "永定区", "value": "02" }, { "text": "武陵源区", "value": "11" }, { "text": "慈利县", "value": "21" }, { "text": "桑植县", "value": "22" }], "value": "08" }, { "text": "益阳市", "children": [{ "text": "市辖区", "value": "01" }, { "text": "资阳区", "value": "02" }, { "text": "赫山区", "value": "03" }, { "text": "南县", "value": "21" }, { "text": "桃江县", "value": "22" }, { "text": "安化县", "value": "23" }, { "text": "沅江市", "value": "81" }], "value": "09" }, { "text": "郴州市", "children": [{ "text": "市辖区", "value": "01" }, { "text": "北湖区", "value": "02" }, { "text": "苏仙区", "value": "03" }, { "text": "桂阳县", "value": "21" }, { "text": "宜章县", "value": "22" }, { "text": "永兴县", "value": "23" }, { "text": "嘉禾县", "value": "24" }, { "text": "临武县", "value": "25" }, { "text": "汝城县", "value": "26" }, { "text": "桂东县", "value": "27" }, { "text": "安仁县", "value": "28" }, { "text": "资兴市", "value": "81" }], "value": "10" }, { "text": "永州市", "children": [{ "text": "市辖区", "value": "01" }, { "text": "零陵区", "value": "02" }, { "text": "冷水滩区", "value": "03" }, { "text": "祁阳县", "value": "21" }, { "text": "东安县", "value": "22" }, { "text": "双牌县", "value": "23" }, { "text": "道县", "value": "24" }, { "text": "江永县", "value": "25" }, { "text": "宁远县", "value": "26" }, { "text": "蓝山县", "value": "27" }, { "text": "新田县", "value": "28" }, { "text": "江华瑶族自治县", "value": "29" }], "value": "11" }, { "text": "怀化市", "children": [{ "text": "市辖区", "value": "01" }, { "text": "鹤城区", "value": "02" }, { "text": "中方县", "value": "21" }, { "text": "沅陵县", "value": "22" }, { "text": "辰溪县", "value": "23" }, { "text": "溆浦县", "value": "24" }, { "text": "会同县", "value": "25" }, { "text": "麻阳苗族自治县", "value": "26" }, { "text": "新晃侗族自治县", "value": "27" }, { "text": "芷江侗族自治县", "value": "28" }, { "text": "靖州苗族侗族自治县", "value": "29" }, { "text": "通道侗族自治县", "value": "30" }, { "text": "洪江市", "value": "81" }], "value": "12" }, { "text": "娄底市", "children": [{ "text": "市辖区", "value": "01" }, { "text": "娄星区", "value": "02" }, { "text": "双峰县", "value": "21" }, { "text": "新化县", "value": "22" }, { "text": "冷水江市", "value": "81" }, { "text": "涟源市", "value": "82" }], "value": "13" }, { "text": "湘西土家族苗族自治州", "children": [{ "text": "吉首市", "value": "01" }, { "text": "泸溪县", "value": "22" }, { "text": "凤凰县", "value": "23" }, { "text": "花垣县", "value": "24" }, { "text": "保靖县", "value": "25" }, { "text": "古丈县", "value": "26" }, { "text": "永顺县", "value": "27" }, { "text": "龙山县", "value": "30" }], "value": "31" }], "value": "43" }];
 		
     var flow = weui.flow('#flow', {
         finishText: '确认提交',
@@ -525,7 +525,7 @@
     });
 		
 	$('#district').on('click', function() {
-		weui.picker(district,
+		weui.picker(districtData,
 						{
 							valueField: 'value',
 							textField: 'text',
@@ -546,7 +546,7 @@
 			var ele_name = $(this).attr('name');
 			var ele_value = $(this).val();
 			if(ele_name != undefined) {
-				alert(ele_name);
+				console.log(ele_name);
 				$('#save_all').find('span[name='+ele_name+']').html(ele_value);
 			}
 		});
@@ -561,7 +561,7 @@
 						weui.picker(data.debit_fee_algo,
 										{
 											valueField: 'value',
-											textField: 'text',
+											textField: 'label',
 											className: 'custom-classname',
 											onChange: function(result) {
 												console.log(result)
@@ -592,23 +592,31 @@
 					$('#subbranch_name').on('click', function() {
 						var select2 = weui.select2({
 							data: [],
+							queryParams: {},
+            				rowsName: 'rows',
+							url: '',
 							loader: function(param, success, error) {
-								 $.ajax({
-									 url: 'url',
-									 type: 'POST',
-									 dataType: 'json',
-									 data: param,
-									 success: function(data) {
-										 success(data.rows);
-									 },
-									 error: function(error) {
-										 error();
-									 }
-								 });
+								var queryParams = $.extend(options.queryParams, param);
+
+								$$.request(options.url, queryParams, {
+									success: function(data) {
+										if (data.errcode == 0) {
+											success(data[options.rowsName]);
+										} else {
+											weui.alert(data.errmsg, error, {
+												title: '提示'
+											});
+										}
+									},
+									error: function() {
+										error();
+									}
+								})
 							},
 							onClickItem: function(row) {
 								console.log(arguments);
-								$('#subbranch_name').value=row.text;
+								var opts = this.options;
+                				$('#subbranch_name').val(row[opts.textField]).attr('data-value', row[opts.valueField]);
 							}
 						});
 					});
